# ChangeLog for dev-java/ibm-jdk-bin
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/ibm-jdk-bin/ChangeLog,v 1.78 2006/09/17 19:24:36 betelgeuse Exp $

  17 Sep 2006; Petteri Räty <betelgeuse@gentoo.org>
  ibm-jdk-bin-1.5.0.2.ebuild:
  It seems that the gtk2 version of javaplugin also needs gtk1. Now depends on
  both.

  17 Sep 2006; Petteri Räty <betelgeuse@gentoo.org>
  ibm-jdk-bin-1.5.0.ebuild:
  Removed other keywords than ~s390 from 1.5.0 because generation 2 eclasses
  should be used with 1.5 jdks.

  17 Sep 2006; Petteri Räty <betelgeuse@gentoo.org>
  ibm-jdk-bin-1.4.2.04.ebuild, ibm-jdk-bin-1.4.2.6-r1.ebuild,
  ibm-jdk-bin-1.4.2.6-r3.ebuild, ibm-jdk-bin-1.5.0.ebuild,
  ibm-jdk-bin-1.5.0.2.ebuild:
  Fixed dependencies by adding the deps needed by nsplugin and added the alsa
  use flag. Now removes the plugin and alsa shared libraries if the use flags
  are not set. Fixes bug #147610 and bug #118685.

  17 Sep 2006; Vlastimil Babka <caster@gentoo.org> -files/ibm-jdk-bin-1.4.2,
  -files/ibm-jdk-bin-1.4.2.03, -ibm-jdk-bin-1.4.2.03.ebuild,
  -ibm-jdk-bin-1.4.2.04-r10.ebuild, -ibm-jdk-bin-1.4.2.5.ebuild,
  -ibm-jdk-bin-1.4.2.6.ebuild, -ibm-jdk-bin-1.5.0-r11.ebuild:
  Cleanup of obsolete ebuilds.

  15 Sep 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  ibm-jdk-bin-1.4.2.6-r1.ebuild:
  Stable on x86 wrt bug #136710.

  15 Sep 2006; Joshua Nichols <nichoj@gentoo.org>
  ibm-jdk-bin-1.4.2.6-r1.ebuild:
  Added QA_TEXTRELS for ppc64. Keyworded ppc64. Also only do chmod on javaws
  if its there, since it isn't available on all archs.

  15 Sep 2006; Vlastimil Babka <caster@gentoo.org>
  ibm-jdk-bin-1.4.2.6-r1.ebuild, ibm-jdk-bin-1.4.2.6-r3.ebuild:
  Adding support for eventual s390 keywording

  15 Sep 2006; Joshua Nichols <nichoj@gentoo.org>
  ibm-jdk-bin-1.4.2.6-r1.ebuild:
  Added QA_TEXTRELS for ppc. Added ppc keyword for bug #136710
