@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/ibm-jdk-bin
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/ibm-jdk-bin/ChangeLog,v 1.78 2006/09/17 19:24:36 betelgeuse Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/ibm-jdk-bin/ChangeLog,v 1.79 2006/09/18 16:46:29 betelgeuse Exp $
+
+  18 Sep 2006; Petteri Räty <betelgeuse@gentoo.org>
+  ibm-jdk-bin-1.5.0.2.ebuild:
+  Fixed a typo that resulted in sandbox violation. Fixes bug #148039.
 
   17 Sep 2006; Petteri Räty <betelgeuse@gentoo.org>
   ibm-jdk-bin-1.5.0.2.ebuild:
